# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: gendiff.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_json.json  expected_yml.json
